# home_work

./: .coverage  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_external_api_py.html  z_145eef247bfb46b6_file_reader_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_utills_py.html  z_145eef247bfb46b6_widget_py.html
src/: decorators.py  external_api.py  file_reader.py  generators.py  main.py  masks.py  processing.py  utills.py  widget.py
tests/: test_decorators.py  test_external_api.py  test_file_reader.py  test_generators.py  test_main.py  test_masks.py  test_processing.py  test_utills.py  test_widget.py
